--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true">
+        <activity android:name=".NaverMap"></activity>
         <activity
             android:name=".SplashActivity"
             android:theme="@style/IntroTheme">
@@ -24,19 +25,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        //네이버지도 API 관련 코드-----------------------
+
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="57doq5pyf4" />
-        //---------------------------------------------
-
-        //카카오지도 API 관련 코드------------------------------
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="ea9d3fb4d0e2c299973581d14791e836" />
-        //-----------------------------------------------------
 
         <activity android:name=".MainActivity">
+
             <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
