--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -41,6 +42,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
+    implementation 'com.android.support:multidex:1.0.3'
 
     //네이버 API(지도, 네아로) 관련 코드--------------------------
     implementation 'com.naver.maps:map-sdk:3.7.1'
@@ -53,15 +55,19 @@ dependencies {
     implementation "androidx.legacy:legacy-support-v4:$android_x_version"
     //----------------------------------------------------------
 
+    //카카오 로컬 검색 API 관련 코드-------------------------------------------
+    implementation 'androidx.recyclerview:recyclerview:1.1.0' //RecyclerView
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1' //Retrofit
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.1' //Gson
+    implementation 'com.squareup.retrofit2:converter-moshi:2.0.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.4' //RxAdapter
+    implementation 'com.squareup.okhttp3:okhttp:4.2.1' //okhttp
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+    implementation 'com.jakewharton.timber:timber:4.7.1' //timber
+    //-----------------------------------------------------------------------
+
     // menu
     implementation 'com.google.android.material:material:1.0.0'
-
-    //recyclerview
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-
-    //retrofit2
-    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
