--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,20 +16,18 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true">
 
-        <activity android:name=".NaverLoginAPI"></activity>
+        <activity android:name=".SearchActivity"/>
+        <activity android:name=".NaverLoginAPI" />
 
         <activity
             android:name=".SplashActivity"
             android:theme="@style/IntroTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <meta-data
-            android:name="com.naver.maps.map.CLIENT_ID"
-            android:value="57doq5pyf4" />
 
         <activity android:name=".MainActivity">
             <!--
@@ -39,6 +37,10 @@
             </intent-filter>
             -->
         </activity>
+
+        <meta-data
+            android:name="com.naver.maps.map.CLIENT_ID"
+            android:value="57doq5pyf4" />
     </application>
 
 </manifest>
